syntax = "proto2";
import "goby/protobuf/option_extensions.proto";
import "goby/acomms/protobuf/driver_base.proto"; // load up message DriverBaseConfig

package goby.acomms.udp.protobuf;

message Config
{
    message EndPoint
    {
        optional string ip = 1 [default = "127.0.0.1"];
        required uint32 port = 2;
    }

    optional EndPoint local = 1 [(goby.field).description =
                                    "The endpoint of the local machine "
                                    "(IP address can be omitted)"];
    optional EndPoint remote = 2
            [(goby.field).description =
             "The endpoint of the receiving machine."];
    optional int32 max_frame_size = 3 [default = 65536];
}

extend goby.acomms.protobuf.DriverConfig
{
    optional Config config = 1341;
}

